Styling | Fixes navigation overflow and position of wishlist

--- a/src/styling/components/_prometheus-search.scss
+++ b/src/styling/components/_prometheus-search.scss
@@ -1,6 +1,5 @@
 .searchContainer {
   margin-top: 20px;
-  overflow: auto;
 
   input {
     background: #282c34;
