--- a/src/styling/components/_prometheus-wishlist.scss
+++ b/src/styling/components/_prometheus-wishlist.scss
@@ -1,8 +1,8 @@
 .wishlist{
   position: absolute;
-  right: 0;
+  right: 20px;
   text-align: center;
-  top: 0;
+  top: 20px;
 
   .wishlist__icon {
     display: inline-block;
